feat: добавлен редактор в админку акций, добавлено модальное окно в акции

--- a/src/widgets/DiscountItem/DiscountItem.module.scss
+++ b/src/widgets/DiscountItem/DiscountItem.module.scss
@@ -47,7 +47,7 @@
   min-width: rem(350);
   max-width: rem(350);
   max-height: rem(260);
-  height: 100%;
+  height: rem(260);
   -o-object-fit: cover;
   object-fit: cover;
   -o-object-position: center;
@@ -55,6 +55,15 @@
   position: relative;
   z-index: 5;
   overflow: hidden;
+
+  & img {
+    width: 100%;
+    height: 100%;
+    -o-object-fit: cover;
+    object-fit: cover;
+    -o-object-position: center;
+    object-position: center;
+  }
 
   @media screen and (max-width: $max-850) {
     max-width: none;
