--- a/src/widgets/Modals/DiscountModal.module.scss
+++ b/src/widgets/Modals/DiscountModal.module.scss
@@ -16,185 +16,331 @@
   overflow-x: hidden;
   overflow-y: scroll;
   transition: 0.2s;
-
-  @media (max-width: $max-800) {
-    align-items: flex-start;
-  }
+  cursor: pointer;
 
   &.hidden {
     opacity: 0;
     visibility: hidden;
   }
 }
-.modal2 {
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 100;
+.modalInner {
   width: 100%;
-  height: 100vh;
+  height: 80vh;
+  background-color: #232222;
+  border-radius: rem(12);
+  display: flex;
+  flex-direction: column;
+  cursor: default;
+  overflow: hidden;
+  overflow-y: auto;
+  position: relative;
+  padding-bottom: rem(40);
+}
+.upper {
+  margin-top: rem(-1);
+  padding: rem(30) rem(40);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  position: -webkit-sticky;
+  position: sticky;
+  top: rem(-1);
+  z-index: 101;
+  background-color: #232222;
+  gap: rem(20);
+
+  @media (max-width: $max-768) {
+    padding: rem(20);
+    align-items: flex-start;
+  }
+}
+.name {
+  @include gilroy(600);
+  font-size: rem(24);
+  color: $white;
+  text-wrap: pretty;
+
+  @media (max-width: $max-768) {
+    font-size: rem(20);
+  }
+}
+.bgText {
+  position: absolute;
+  top: 10%;
+  left: 50%;
+  transform: translate(-50%, 0);
+  z-index: 0;
+  @include playfair(700);
+  font-size: rem(110);
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  cursor: default;
+  opacity: 0.1;
+  background: linear-gradient(
+    180deg,
+    #fff 65.38%,
+    rgba(255, 255, 255, 0) 81.82%
+  );
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  letter-spacing: rem(6);
+  text-transform: uppercase;
+  white-space: nowrap;
+
+  @media screen and (max-width: $max-850) {
+    font-size: rem(70);
+    text-align: center;
+  }
+
+  @media (max-width: $max-768) {
+    top: 15%;
+  }
+
+  @media screen and (max-width: $max-450) {
+    font-size: rem(56);
+    bottom: rem(-50);
+  }
+}
+.closeButton {
+  @include gilroy(400);
+  color: $white;
+  font-size: rem(54);
+  border: 0;
+  outline: none;
+  background: transparent;
+  cursor: pointer;
+  transition: 0.2s;
+  max-width: rem(26);
+  width: 100%;
+  height: rem(26);
   display: flex;
   justify-content: center;
   align-items: center;
-  background: rgba(40, 35, 32, 0.7);
-  -webkit-backdrop-filter: blur(7px);
-  backdrop-filter: blur(7px);
-  overflow-x: hidden;
-  overflow-y: scroll;
-  transition: 0.2s;
 
-  &.hidden {
-    opacity: 0;
-    visibility: hidden;
+  &:hover {
+    color: darken($white, 10%);
+  }
+
+  @media screen and (max-width: $max-768) {
+    padding-top: rem(20);
   }
 }
-.modalVideo {
-  cursor: pointer;
+.label {
+  margin-top: rem(30);
+  @include gilroy(400);
+  font-size: rem(16);
+  color: $white;
+  padding: 0 rem(40);
+  margin-bottom: rem(10);
+
+  @media (max-width: $max-768) {
+    padding: 0 rem(20);
+  }
+}
+.description {
+  position: relative;
+  z-index: 10;
+  @include gilroy(400);
+  font-size: rem(18);
+  color: $white;
+  padding: 0 rem(40);
+
+  @media (max-width: $max-768) {
+    padding: 0 rem(20);
+  }
+}
+.content {
+  position: relative;
+  z-index: 100;
+  color: $white;
+  font-family: "Gilroy", sans-serif;
+  padding: 0 rem(40);
+
+  & p {
+    cursor: text;
+    font-size: rem(18);
+    min-height: rem(22);
+  }
+
+  & a {
+    font-weight: 500;
+    font-style: italic;
+    text-decoration: underline;
+    cursor: pointer;
+    color: #fff;
+    font-family: "Gilroy", sans-serif;
+  }
+
+  & br {
+    height: rem(20);
+  }
+
+  & ul,
+  ol {
+    padding: rem(10) 1rem;
+    padding-top: rem(10);
+  }
+
+  & ul {
+    list-style: disc;
+
+    & li::marker {
+      font-size: rem(30);
+    }
+  }
+  & ol {
+    list-style: decimal;
+
+    & li::marker {
+      font-size: rem(22);
+    }
+  }
+
+  & h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    line-height: 1.1;
+    cursor: text;
+  }
+
+  & h1 {
+    font-size: rem(40);
+  }
+
+  & h2 {
+    font-size: rem(36);
+  }
+
+  & h3 {
+    font-size: rem(32);
+  }
+
+  & h4 {
+    font-size: rem(28);
+  }
+
+  & h5 {
+    font-size: rem(24);
+  }
+
+  & h6 {
+    font-size: rem(22);
+  }
+
+  & code {
+    background-color: rgba(#616161, 0.1);
+    color: #616161;
+  }
+
+  & pre {
+    background: #0d0d0d;
+    color: #fff;
+    font-family: "JetBrainsMono", monospace;
+    padding: 0.75rem 1rem;
+    border-radius: 0.5rem;
+
+    & code {
+      color: inherit;
+      padding: 0;
+      background: none;
+      font-size: 0.8rem;
+    }
+  }
+
+  & img {
+    margin: rem(50) auto;
+    max-width: rem(720);
+    width: 100%;
+    max-height: rem(400);
+    height: 100%;
+    -o-object-fit: cover;
+    object-fit: cover;
+    -o-object-position: center;
+    object-position: center;
+    border-radius: rem(6);
+
+    -webkit-mask: linear-gradient(
+      0deg,
+      rgba(40, 35, 32, 0.4) 0%,
+      rgba(40, 35, 32, 1) 56.4%,
+      rgba(40, 35, 32, 0.4) 100%
+    );
+
+    mask: linear-gradient(
+      0deg,
+      rgba(40, 35, 32, 0.4) 0%,
+      rgba(40, 35, 32, 1) 56.4%,
+      rgba(40, 35, 32, 0.4) 100%
+    );
+  }
+
+  & blockquote {
+    padding-left: 1rem;
+    border-left: 2px solid rgba(#fff, 0.5);
+  }
+
+  & hr {
+    border: none;
+    border-top: 2px solid rgba(#fff, 0.5);
+    margin: 2rem 0;
+  }
+
+  @media (max-width: $max-768) {
+    margin-top: rem(30);
+    padding: 0 rem(20);
+
+    & p {
+      font-size: rem(16);
+      min-height: rem(18);
+    }
+
+    & ul li::marker {
+      font-size: rem(20);
+    }
+    & ol li::marker {
+      font-size: rem(18);
+    }
+
+    & h1 {
+      font-size: rem(36);
+    }
+
+    & h2 {
+      font-size: rem(32);
+    }
+
+    & h3 {
+      font-size: rem(28);
+    }
+
+    & h4 {
+      font-size: rem(24);
+    }
+
+    & h5 {
+      font-size: rem(20);
+    }
+
+    & h6 {
+      font-size: rem(18);
+    }
+
+    & img {
+      margin: rem(30) auto;
+      max-height: rem(180);
+    }
+  }
+}
+.lower {
 }
 .container {
   @include container();
   position: relative;
-}
-.videoContainer {
-  @include container();
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.whiteCloseButton {
-  width: rem(80);
-  height: rem(80);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  @include gilroy(400);
-  font-size: rem(54);
-  color: #fff;
-  position: absolute;
-  top: rem(-80);
-  right: 0;
-  z-index: 10;
-  background: transparent;
-  border: 0;
-  outline: none;
-  cursor: pointer;
-}
-.iframe {
-  max-width: rem(1030);
-  width: 100%;
-  aspect-ratio: 16/9;
-  border-radius: rem(20);
-}
-.card2 {
-  background-image: url("../../data/images/mini-modal.webp");
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
-  -webkit-filter: drop-shadow(0px 4px 60px rgba(221, 213, 203, 0.26));
-  filter: drop-shadow(0px 4px 60px rgba(221, 213, 203, 0.26));
-  position: relative;
-  padding-top: rem(125);
-  max-width: rem(810);
-  min-height: rem(430);
-  width: 100%;
-  height: 100%;
-  margin: 0 auto;
-  display: flex;
-  justify-content: center;
-  cursor: default;
-
-  @media (max-width: $max-800) {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    min-width: rem(810);
-    justify-content: center;
-  }
-}
-.closeButton2 {
-  @include gilroy(400);
-  color: #b79571;
-  font-size: rem(54);
-  position: absolute;
-  top: rem(50);
-  right: rem(50);
-  z-index: 10;
-  border: 0;
-  outline: none;
-  background: transparent;
-  cursor: pointer;
-  transition: 0.2s;
-
-  &:hover {
-    color: darken(#b79571, 10%);
-  }
-
-  @media (max-width: $max-800) {
-    top: rem(70);
-    right: 30%;
-    transform: translate(50%, 0);
-  }
-  @media (max-width: $max-400) {
-    top: rem(70);
-    right: 40%;
-    transform: translate(50%, 0);
-  }
-}
-.minus {
-  @include noto(300);
-  color: #191919;
-  font-size: rem(36);
-  line-height: 1.5;
-  position: relative;
-  z-index: 2;
-
-  @media (max-width: $max-450) {
-    display: none;
-  }
-}
-.wrapper {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-left: rem(30);
-  gap: rem(25);
-  position: relative;
-  z-index: 2;
-  max-width: rem(330);
-
-  @media (max-width: $max-450) {
-    max-width: rem(280);
-    margin-left: 0;
-    gap: rem(20);
-  }
-}
-.title {
-  @include noto(400);
-  font-size: rem(40);
-  color: #b79571;
-  line-height: 1.15;
-  max-width: rem(330);
-
-  @media (max-width: $max-450) {
-    font-size: rem(30);
-    max-width: rem(300);
-  }
-}
-
-.text {
-  max-width: rem(380);
-  @include gilroy(400);
-  color: #4f4a46;
-  text-wrap: pretty;
-  position: relative;
-  z-index: 2;
-
-  & span {
-    font-weight: 700;
-  }
-
-  @media (max-width: $max-400) {
-    max-width: rem(300);
-  }
 }
