--- a/src/widgets/Kitchens/Kitchens.module.scss
+++ b/src/widgets/Kitchens/Kitchens.module.scss
@@ -1,145 +1,148 @@
-@import '@/shared/styles/_vars';
+@import "@/shared/styles/_vars";
 
 .kitchensPage {
-	padding-top: rem(60);
-	background: linear-gradient(
-		180deg,
-		#282320 0%,
-		#322d29 35.47%,
-		#35302c 78.81%,
-		#2d2928 137.57%
-	);
-	padding-bottom: rem(50);
+  padding-top: rem(60);
+  background: linear-gradient(
+    180deg,
+    #282320 0%,
+    #322d29 35.47%,
+    #35302c 78.81%,
+    #2d2928 137.57%
+  );
+  padding-bottom: rem(50);
 }
 .container {
-	@include container();
+  @include container();
 }
 .title {
-	@include noto(400);
-	font-size: rem(40);
-	line-height: 1.3;
-	max-width: rem(700);
-	text-align: center;
-	margin: 0 auto;
-	position: relative;
-	z-index: 2;
-	color: #fff;
+  @include noto(400);
+  font-size: rem(40);
+  line-height: 1.3;
+  max-width: rem(700);
+  text-align: center;
+  margin: 0 auto;
+  position: relative;
+  z-index: 2;
+  color: #fff;
 
-	& span {
-		position: relative;
-		margin: 0 10px;
+  & span {
+    position: relative;
+    margin: 0 10px;
 
-		&::before {
-			position: absolute;
-			content: '';
-			background-color: #7b402e;
-			width: rem(60);
-			aspect-ratio: 1/1;
-			border-radius: rem(100);
-			top: 50%;
-			left: 50%;
-			transform: translate(-50%, -50%);
-			z-index: -1;
-		}
-	}
+    &::before {
+      position: absolute;
+      content: "";
+      background-color: #7b402e;
+      width: rem(60);
+      aspect-ratio: 1/1;
+      border-radius: rem(100);
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      z-index: -1;
+    }
+  }
 
-	@media (max-width: $max-768) {
-		font-size: rem(24);
-		max-width: rem(340);
+  @media (max-width: $max-768) {
+    font-size: rem(24);
+    max-width: rem(340);
 
-		& span::before {
-			width: rem(40);
-		}
-	}
+    & span::before {
+      width: rem(40);
+    }
+  }
 }
 .subtitle {
-	margin: 0 auto;
-	margin-top: rem(15);
-	@include gilroy(400);
-	color: #fff;
-	text-align: center;
-	letter-spacing: rem(0.4);
+  margin: 0 auto;
+  margin-top: rem(15);
+  @include gilroy(400);
+  color: #fff;
+  text-align: center;
+  letter-spacing: rem(0.4);
 
-	& span {
-		@include gilroy(700);
-	}
+  & span {
+    @include gilroy(700);
+  }
 }
 .tabs {
-	width: 100%;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	flex-wrap: wrap;
-	gap: rem(10);
-	margin-top: rem(50);
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: rem(10);
+  margin-top: rem(50);
 }
 .tab {
-	background: linear-gradient(270deg, #9d9387 7.67%, #9c9488 91.46%);
-	padding: rem(16) rem(40);
-	border-radius: rem(100);
-	opacity: 0.5;
-	transition: 0.2s;
-	color: #fff;
-	@include gilroy(700);
-	cursor: pointer;
-	white-space: nowrap;
-	letter-spacing: rem(0.2);
-	border: 0;
-	outline: none;
+  background: linear-gradient(270deg, #9d9387 7.67%, #9c9488 91.46%);
+  padding: rem(16) rem(40);
+  border-radius: rem(100);
+  opacity: 0.5;
+  transition: 0.2s;
+  color: #fff;
+  @include gilroy(700);
+  cursor: pointer;
+  white-space: nowrap;
+  letter-spacing: rem(0.2);
+  border: 0;
+  outline: none;
 
-	&:hover {
-		opacity: 1;
-	}
+  &:hover {
+    opacity: 1;
+  }
 
-	&.active {
-		opacity: 1;
-	}
+  &.active {
+    opacity: 1;
+  }
 }
 
 .kitchens {
-	margin: 0 auto;
-	width: 100%;
-	margin-top: rem(50);
-	display: grid;
-	grid-template-columns: repeat(2, 1fr);
-	grid-template-rows: repeat(10, rem(90));
-	gap: rem(20);
-	grid-template-areas:
-		'one two'
-		'one two'
-		'one two'
-		'one three'
-		'one three'
-		'one three'
-		'four three'
-		'four five'
-		'four five'
-		'four five';
-	margin-bottom: rem(36);
+  margin: 0 auto;
+  width: 100%;
+  margin-top: rem(50);
+  max-width: rem(950);
+  display: grid;
+  grid-template-columns: repeat(2, rem(465));
+  grid-template-rows: repeat(10, rem(90));
+  gap: rem(20);
+  grid-template-areas:
+    "one two"
+    "one two"
+    "one two"
+    "one three"
+    "one three"
+    "one three"
+    "four three"
+    "four five"
+    "four five"
+    "four five";
+  margin-bottom: rem(36);
 
-	@media (max-width: $max-850) {
-		grid-template-columns: 1fr;
-		grid-template-rows: repeat(2, rem(450));
-		grid-template-areas:
-			'one'
-			'two';
+  @media (max-width: $max-1000) {
+    max-width: rem(700);
+    grid-template-columns: 100%;
+    grid-template-rows: repeat(2, rem(450));
+    justify-items: center;
+    grid-template-areas:
+      "one"
+      "two";
 
-		& > div {
-			&:nth-child(3) {
-				display: none;
-			}
-			&:nth-child(4) {
-				display: none;
-			}
-			&:last-child {
-				display: none;
-			}
-		}
-	}
+    & > a {
+      &:nth-child(3) {
+        display: none;
+      }
+      &:nth-child(4) {
+        display: none;
+      }
+      &:last-child {
+        display: none;
+      }
+    }
+  }
 }
 
 .swiper-slide {
-	display: flex;
-	justify-content: center;
-	align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
