feat: добавлен дебаунс в админку

--- a/src/app/admin/Page.module.scss
+++ b/src/app/admin/Page.module.scss
@@ -64,6 +64,11 @@
   &:hover {
     background-color: darken(#fff, 10%);
   }
+
+  &[disabled] {
+    opacity: 0.5;
+    cursor: not-allowed;
+  }
 }
 .addForm {
   margin-top: rem(30);
