--- a/src/pages/ArticlePage.module.scss
+++ b/src/pages/ArticlePage.module.scss
@@ -15,6 +15,7 @@
 }
 .kitchenPage {
   padding-top: rem(150);
+  padding-bottom: rem(50);
   background: linear-gradient(
     180deg,
     #312d2a 0%,
@@ -124,7 +125,7 @@
   margin-top: rem(50);
 
   @media (max-width: $max-768) {
-    margin-top: rem(40 n);
+    margin-top: rem(40);
   }
 }
 .previewWrapperKitchen {
@@ -139,7 +140,88 @@
   margin-top: rem(50);
 
   @media (max-width: $max-768) {
-    margin-top: rem(40 n);
+    margin-top: rem(40);
+  }
+}
+.betweenWrapper {
+  position: absolute;
+  bottom: rem(40);
+  left: rem(20);
+  z-index: 1;
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: column;
+  gap: rem(20);
+
+  @media screen and (max-width: $max-768) {
+    bottom: rem(150);
+    left: rem(20);
+  }
+  @media screen and (max-width: $max-550) {
+    bottom: rem(120);
+    left: rem(20);
+  }
+}
+.tags {
+  display: flex;
+  align-items: center;
+  gap: rem(10);
+}
+.name {
+  @include gilroy(700);
+  font-size: rem(16);
+  line-height: 1.5;
+  cursor: text;
+  text-wrap: balance;
+}
+.priceWrapper {
+  display: flex;
+  align-items: center;
+  gap: rem(16);
+}
+.price {
+  @include noto(400);
+  line-height: 1.3;
+  font-size: rem(20);
+  cursor: text;
+  color: $white;
+
+  & span {
+    font-size: rem(16);
+
+    &.brown {
+      color: #73655b;
+      margin-right: rem(5);
+    }
+  }
+}
+.tag {
+  @include gilroy(700);
+  font-size: rem(7);
+  text-transform: uppercase;
+  padding: rem(5) rem(12);
+  border-radius: rem(50);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  line-height: 2;
+  letter-spacing: rem(0.7);
+  position: relative;
+  z-index: 5;
+  white-space: nowrap;
+  background-color: rgba(40, 34, 26, 0.6);
+  color: $white;
+
+  &:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: rem(50);
   }
 }
 .previewPhoto {
@@ -171,7 +253,40 @@
     rgba(40, 35, 32, 0.4) 100%
   );
 }
+.contentString {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  gap: rem(30);
+  margin-top: rem(30);
+  padding-left: rem(20);
+  color: #fff;
+  font-family: "Gilroy", sans-serif;
+  max-width: rem(940);
+  margin-left: auto;
+  margin-right: auto;
 
+  & h5 {
+    font-size: rem(24);
+    color: $white;
+    cursor: text;
+  }
+
+  @media (max-width: $max-768) {
+    margin-top: rem(30);
+    padding: 0;
+  }
+
+  @media screen and (max-width: $max-450) {
+    flex-direction: column-reverse;
+  }
+}
+.start {
+  @media screen and (max-width: $max-450) {
+    align-self: flex-start;
+  }
+}
 .viewCount {
   display: flex;
   align-items: flex-end;
@@ -198,6 +313,10 @@
   max-width: rem(940);
   margin-left: auto;
   margin-right: auto;
+
+  &.kitchenContent {
+    margin-top: rem(20);
+  }
 
   & p {
     cursor: text;
