--- a/src/widgets/KitchenSlider/KitchenSlider.module.scss
+++ b/src/widgets/KitchenSlider/KitchenSlider.module.scss
@@ -29,8 +29,8 @@
     height: rem(300);
   }
   @media screen and (max-width: $max-450) {
-    max-height: rem(230);
-    height: rem(230);
+    max-height: rem(280);
+    height: rem(280);
   }
 }
 .sliderImage {
@@ -44,6 +44,18 @@
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+  -webkit-mask: linear-gradient(
+    0deg,
+    rgba(40, 35, 32, 0.05) 0%,
+    rgba(40, 35, 32, 1) 56.4%,
+    rgba(40, 35, 32, 0.2) 100%
+  );
+  mask: linear-gradient(
+    0deg,
+    rgba(40, 35, 32, 0.05) 0%,
+    rgba(40, 35, 32, 1) 56.4%,
+    rgba(40, 35, 32, 0.2) 100%
+  );
 }
 // Thumbs {
 .thumbsSlider {
