--- a/src/widgets/LeaveRequestFile/LeaveRequestFile.module.scss
+++ b/src/widgets/LeaveRequestFile/LeaveRequestFile.module.scss
@@ -12,8 +12,16 @@
     #323030 74.93%
   );
   min-height: rem(550);
+  max-width: rem(1350);
+  border-radius: rem(12);
   overflow: hidden;
+  margin: 0 auto;
   position: relative;
+
+  &.full {
+    max-width: none;
+    border-radius: 0;
+  }
 }
 
 .container {
