--- a/src/widgets/Modals/LeaveRequestFileModal/LeaveRequestFileModal.module.scss
+++ b/src/widgets/Modals/LeaveRequestFileModal/LeaveRequestFileModal.module.scss
@@ -13,17 +13,72 @@
   );
   min-height: rem(550);
   max-width: rem(1350);
+  width: 100%;
   border-radius: rem(12);
   overflow: hidden;
   margin: 0 auto;
   position: relative;
+  transition: 0.2s;
 
   &.full {
     max-width: none;
     border-radius: 0;
   }
 }
+.modal {
+  opacity: 1;
+  visibility: visible;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 99;
+  width: 100%;
+  min-height: 100vh;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgba(40, 35, 32, 0.7);
+  -webkit-backdrop-filter: blur(7px);
+  backdrop-filter: blur(7px);
+  overflow-x: hidden;
+  overflow-y: scroll;
+  transition: 0.2s;
 
+  &.hidden {
+    opacity: 0;
+    visibility: hidden;
+  }
+
+  @media (max-width: $max-1300) {
+    padding: rem(14);
+  }
+
+  @media (max-width: $max-1000) {
+    align-items: flex-start;
+  }
+  @media (max-width: $max-768) {
+    padding-block: rem(50);
+  }
+}
+.closeButton {
+  @include gilroy(400);
+  color: $white;
+  font-size: rem(54);
+  position: absolute;
+  top: rem(-20);
+  right: rem(10);
+  z-index: 10;
+  border: 0;
+  outline: none;
+  background: transparent;
+  cursor: pointer;
+  transition: 0.2s;
+
+  &:hover {
+    color: darken($white, 10%);
+  }
+}
 .container {
   @include container();
   max-width: rem(1300);
@@ -80,7 +135,8 @@
   font-size: rem(40);
   line-height: 1.3;
   color: $white;
-  text-wrap: balance;
+  padding-right: rem(30);
+  text-wrap: pretty;
 
   @media screen and (max-width: $max-768) {
     font-size: rem(24);
@@ -152,7 +208,7 @@
 }
 .card {
   margin-top: rem(40);
-  background-image: url("../../data/images/request_card_file.webp");
+  background-image: url("../../../data/images/request_card_file.webp");
   background-repeat: no-repeat;
   background-size: 100% 100%;
   max-width: rem(730);
@@ -173,7 +229,7 @@
   }
 
   @media screen and (max-width: $max-500) {
-    background-image: url("../../data/images/request_card_file_mob.webp");
+    background-image: url("../../../data/images/request_card_file_mob.webp");
     padding-inline: rem(30);
   }
 }
