--- a/src/widgets/ChoiseHelloScreen/ChoiseHelloScreen.module.scss
+++ b/src/widgets/ChoiseHelloScreen/ChoiseHelloScreen.module.scss
@@ -6,7 +6,7 @@
   max-height: rem(1400);
   height: 100%;
   overflow: hidden;
-  padding-top: rem(160);
+  padding-top: rem(120);
   position: relative;
 
   @media (max-width: $max-1300) {
@@ -15,6 +15,10 @@
 
     &.furnitureScreen {
       padding-top: rem(140);
+
+      @media screen and (max-width: $max-600) {
+        padding-top: rem(120);
+      }
     }
 
     &.kitchensScreen {
@@ -23,19 +27,25 @@
       @media screen and (max-width: $max-950) {
         padding-top: rem(80);
       }
+      @media screen and (max-width: $max-600) {
+        padding-top: rem(60);
+      }
     }
   }
 
-  @media (max-width: $max-450) {
-    min-height: rem(850);
+  @media screen and (max-width: $max-700) {
+    min-height: rem(800);
+  }
+  @media (max-width: $max-600) {
+    min-height: rem(780);
   }
 
   &.screenIpad {
-    padding-top: rem(190);
+    padding-top: rem(150);
     position: relative;
 
     @media screen and (max-width: $max-1300) {
-      padding-top: rem(150);
+      padding-top: rem(170);
       flex-direction: column;
       align-items: flex-start;
     }
@@ -43,10 +53,14 @@
       padding-top: rem(160);
     }
     @media screen and (max-width: $max-768) {
-      min-height: rem(900);
+      min-height: rem(850);
     }
     @media screen and (max-width: $max-700) {
-      min-height: rem(850);
+      min-height: rem(800);
+    }
+    @media screen and (max-width: $max-600) {
+      padding-top: rem(140);
+      min-height: rem(750);
     }
   }
 }
@@ -92,12 +106,12 @@
 }
 .container {
   @include container();
-
-  @media (min-width: $max-700) {
-    padding-left: rem(56);
-  }
-  position: relative;
   z-index: 2;
+  position: relative;
+
+  @media screen and (max-width: $max-1000) {
+    position: static;
+  }
 
   &.reverseDots {
     display: flex;
@@ -137,13 +151,13 @@
       flex-direction: column;
       align-items: flex-start;
       order: 3;
-      margin-top: rem(60);
+      margin-top: rem(50);
 
       &.upperTags {
         margin-top: rem(20);
 
         @media screen and (max-width: $max-700) {
-          margin-top: rem(60);
+          margin-top: rem(40);
         }
       }
 
@@ -179,14 +193,13 @@
   }
 }
 .title {
-  margin-top: rem(50);
+  margin-top: rem(30);
   @include noto(300);
   font-size: rem(48);
   line-height: 1.3;
   color: #fff;
   max-width: rem(660);
   width: 100%;
-  margin-bottom: rem(20);
   order: 2;
   position: relative;
   z-index: 10;
@@ -238,16 +251,19 @@
   font-size: rem(18);
   color: $white;
   max-width: rem(663);
-  margin-top: rem(50);
+  margin-top: rem(30);
   order: 3;
   position: relative;
   z-index: 10;
 
   &.upperSubtitle {
     @media screen and (max-width: $max-950) {
-      margin-top: 0;
+      margin-top: rem(10);
     }
 
+    @media screen and (max-width: $max-768) {
+      margin-top: rem(30);
+    }
     @media screen and (max-width: $max-700) {
       margin-top: rem(30);
     }
@@ -264,8 +280,10 @@
 }
 
 .button {
-  margin-top: rem(50);
-  order: 4;
+  position: absolute;
+  left: rem(20);
+  bottom: rem(140);
+  z-index: 10;
 
   @media (max-width: $max-768) {
     margin: 0 auto;
@@ -288,7 +306,7 @@
 }
 .ipad {
   position: absolute;
-  right: rem(-100);
+  right: rem(-120);
   top: 50%;
   transform: translate(0, -50%);
   z-index: 1;
@@ -297,20 +315,21 @@
   order: 4;
 
   @media screen and (max-width: $max-1300) {
+    right: 0;
     position: static;
     margin-top: rem(200);
     padding-inline: rem(40);
+    align-self: flex-end;
   }
   @media screen and (max-width: $max-1000) {
-    margin: 0 auto;
     margin-top: rem(120);
     max-width: rem(400);
   }
   @media screen and (max-width: $max-768) {
     order: 3;
-  }
-  @media screen and (max-width: $max-450) {
+    margin: 0 auto;
     margin-top: rem(140);
+    margin-bottom: rem(100);
   }
 }
 .ipadImg {
