--- a/src/widgets/ChoiseHelloScreen/ChoiseHelloScreen.module.scss
+++ b/src/widgets/ChoiseHelloScreen/ChoiseHelloScreen.module.scss
@@ -39,8 +39,11 @@
   @media screen and (max-width: $max-700) {
     min-height: rem(800);
   }
-  @media (max-width: $max-600) {
+  @media screen and (max-width: $max-600) {
     min-height: rem(780);
+  }
+  @media screen and (max-width: $max-400) {
+    min-height: rem(790);
   }
 
   &.screenIpad {
@@ -63,7 +66,7 @@
     }
     @media screen and (max-width: $max-600) {
       padding-top: rem(140);
-      min-height: rem(750);
+      min-height: rem(780);
     }
   }
 }
@@ -119,6 +122,13 @@
   &.reverseDots {
     display: flex;
     flex-direction: column;
+
+    @media screen and (max-width: $max-1300) {
+      min-height: rem(670);
+    }
+    @media screen and (max-width: $max-1000) {
+      min-height: auto;
+    }
 
     .tags {
       @media screen and (max-width: $max-950) {
@@ -282,6 +292,36 @@
   }
 }
 
+.asks {
+  order: 3;
+  margin-top: rem(30);
+  display: flex;
+  flex-direction: column;
+  gap: rem(20);
+}
+.ask {
+  display: flex;
+  align-items: center;
+  gap: rem(14);
+
+  justify-content: flex-start;
+}
+.icon {
+  color: $white;
+  -webkit-filter: drop-shadow(0px 0px rem(12) #f28c6b)
+    drop-shadow(0px 0px rem(19) #f28c6b);
+  filter: drop-shadow(0px 0px rem(12) #f28c6b)
+    drop-shadow(0px 0px rem(19) #f28c6b);
+  width: rem(22);
+  height: rem(22);
+}
+.askText {
+  @include gilroy(500);
+  font-size: rem(16);
+  color: #f28c6b;
+  line-height: 1.3;
+}
+
 .button {
   position: absolute !important;
   left: rem(20);
@@ -320,7 +360,6 @@
   @media screen and (max-width: $max-1300) {
     right: 0;
     position: static;
-    margin-top: rem(180);
     padding-inline: rem(40);
     align-self: flex-end;
   }
@@ -331,11 +370,15 @@
   @media screen and (max-width: $max-768) {
     order: 3;
     margin: 0 auto;
-    margin-top: rem(100);
+    margin-top: rem(80);
     margin-bottom: rem(100);
+    max-width: rem(300);
   }
   @media screen and (max-width: $max-600) {
-    margin-top: rem(140);
+    margin-top: rem(100);
+  }
+  @media screen and (max-width: $max-600) {
+    margin-top: rem(80);
   }
 }
 .ipadImg {
