--- a/src/widgets/LeaveRequestMini/LeaveRequestMini.module.scss
+++ b/src/widgets/LeaveRequestMini/LeaveRequestMini.module.scss
@@ -65,6 +65,44 @@
     background-image: url("../../data/images/modal_bg3_big.svg");
     height: 100%;
     min-height: rem(700);
+    padding-top: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+
+    .title {
+      max-width: rem(520);
+    }
+  }
+}
+.call {
+  background-image: url("../../data/images/modal_bg_call.svg");
+  background-repeat: no-repeat;
+  background-size: 100%;
+  max-width: rem(1060);
+  min-width: rem(1060);
+  width: 100%;
+  position: relative;
+  padding-top: rem(80);
+  min-height: rem(350);
+
+  @media (max-width: $max-1100) {
+    top: 0;
+    left: 50%;
+    transform: translate(-50%, 0);
+    height: 100%;
+  }
+
+  @media (max-width: $max-950) {
+    background-image: url("../../data/images/modal_bg_call_big.svg");
+    min-height: rem(650);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    min-width: rem(1000);
+    padding-top: 0;
   }
 }
 .closeButton {
