--- a/src/widgets/ChoiseHelloScreen/ChoiseHelloScreen.module.scss
+++ b/src/widgets/ChoiseHelloScreen/ChoiseHelloScreen.module.scss
@@ -230,6 +230,10 @@
     max-width: rem(840);
   }
 
+  &.w980 {
+    max-width: rem(980);
+  }
+
   &.w1050 {
     font-size: rem(44);
     max-width: rem(1050);
