--- a/src/widgets/LeaveRequestMini/LeaveRequestMini.module.scss
+++ b/src/widgets/LeaveRequestMini/LeaveRequestMini.module.scss
@@ -186,7 +186,7 @@
 
 .text {
   margin: 0 auto;
-  margin-top: rem(40);
+  margin-top: rem(20);
   @include gilroy(400);
   color: #4f4a46;
   text-wrap: pretty;
@@ -199,7 +199,7 @@
   }
 
   @media (max-width: $max-600) {
-    margin-top: rem(20);
+    margin-top: rem(10);
     max-width: rem(500);
   }
   @media (max-width: $max-400) {
@@ -216,7 +216,7 @@
 }
 .inputsWrapper2 {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   gap: rem(20);
 
   @media (max-width: $max-950) {
@@ -297,9 +297,7 @@
   align-items: center;
 
   @media (max-width: $max-1100) {
-    max-width: rem(350);
     align-items: center;
-    margin-top: rem(10);
   }
 }
 .writeText {
@@ -312,4 +310,28 @@
 .button {
   font-size: rem(12);
   min-width: rem(260);
+}
+.infoText {
+  @include gilroy(400);
+  font-size: rem(10);
+  color: #adb6bf;
+  margin-top: rem(4);
+
+  & button {
+    color: #f28c6b;
+    text-decoration: none;
+    border: 0;
+    outline: none;
+
+    &:hover {
+      text-decoration: underline;
+    }
+    &:focus {
+      text-decoration: underline;
+    }
+  }
+
+  @media screen and (max-width: $max-800) {
+    max-width: rem(230);
+  }
 }
