fix: переделана главная страница

--- a/src/pages/FurniturePage.module.scss
+++ b/src/pages/FurniturePage.module.scss
@@ -1,13 +1,16 @@
-@import '@/shared/styles/_vars';
+@import "@/shared/styles/_vars";
 
 .bg {
-	background: linear-gradient(
-		180deg,
-		#433a31 0%,
-		#433a31 11.08%,
-		#433a31 19.17%,
-		#433a31 29.31%,
-		#363435 50.3%,
-		#2c2b29 100%
-	);
+  background: linear-gradient(
+    180deg,
+    #433a31 0%,
+    #433a31 11.08%,
+    #433a31 19.17%,
+    #433a31 29.31%,
+    #363435 50.3%,
+    #2c2b29 100%
+  );
+}
+.wrapper {
+  padding: rem(50) 0;
 }
