--- a/src/widgets/Kitchens/Kitchens.module.scss
+++ b/src/widgets/Kitchens/Kitchens.module.scss
@@ -116,12 +116,10 @@
     "four five"
     "four five"
     "four five";
-  margin-bottom: rem(36);
 
   @media (max-width: $max-1000) {
-    max-width: rem(700);
     grid-template-columns: 100%;
-    grid-template-rows: repeat(2, rem(450));
+    grid-template-rows: auto;
     justify-items: center;
     grid-template-areas:
       "one"
@@ -131,9 +129,58 @@
       "five";
   }
 }
+.moreKitchens {
+  margin: 0 auto;
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(2, rem(465));
+  grid-template-rows: auto;
+  gap: rem(20);
+  margin-top: rem(20);
+  max-width: rem(950);
 
+  @media (max-width: $max-1000) {
+    grid-template-columns: 100%;
+  }
+}
+.customKitchen {
+  width: 100%;
+
+  @media (max-width: $max-1000) {
+    max-height: rem(500);
+  }
+
+  &:nth-child(1n + 1) {
+    grid-area: one;
+  }
+  &:nth-child(2n + 2) {
+    grid-area: two;
+  }
+  &:nth-child(3n + 3) {
+    grid-area: three;
+  }
+  &:nth-child(4n + 4) {
+    grid-area: four;
+  }
+  &:nth-child(5n + 5) {
+    grid-area: five;
+  }
+}
+.kitchenWrapper {
+  width: 100%;
+  height: rem(500);
+}
 .swiper-slide {
   display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.string {
+  margin-top: rem(36);
+  display: flex;
+  gap: rem(30);
+  flex-wrap: wrap;
+  width: 100%;
   justify-content: center;
   align-items: center;
 }
