--- a/src/widgets/LeaveRequest/LeaveRequest.module.scss
+++ b/src/widgets/LeaveRequest/LeaveRequest.module.scss
@@ -14,7 +14,7 @@
   overflow: hidden;
 
   @media (max-width: $max-800) {
-    min-height: rem(900);
+    min-height: rem(950);
     overflow: hidden;
   }
 }
@@ -37,7 +37,7 @@
   min-height: rem(727);
 
   @media (max-width: $max-1100) {
-    min-height: rem(800);
+    min-height: rem(850);
   }
   @media (max-width: $max-800) {
     position: absolute;
@@ -207,6 +207,28 @@
   @media (max-width: $max-1100) {
     margin: 0 auto;
     margin-top: rem(20);
+  }
+  @media (max-width: $max-400) {
+    max-width: rem(300);
+  }
+}
+.moreText {
+  margin-left: rem(380);
+  max-width: rem(450);
+  @include gilroy(600);
+  text-wrap: pretty;
+  position: relative;
+  z-index: 2;
+  font-size: rem(18);
+  color: #b79571;
+
+  & span {
+    font-weight: 700;
+  }
+
+  @media (max-width: $max-1100) {
+    margin: 0 auto;
+    max-width: rem(380);
   }
   @media (max-width: $max-400) {
     max-width: rem(300);
