fix: text leave request

--- a/src/widgets/LeaveRequest2/LeaveRequest2.module.scss
+++ b/src/widgets/LeaveRequest2/LeaveRequest2.module.scss
@@ -174,6 +174,7 @@
   @media (max-width: $max-600) {
     margin: 0 auto;
     max-width: rem(380);
+    text-align: center;
   }
   @media (max-width: $max-400) {
     max-width: rem(300);
