--- a/src/widgets/LeaveRequest/LeaveRequest.module.scss
+++ b/src/widgets/LeaveRequest/LeaveRequest.module.scss
@@ -229,6 +229,7 @@
   @media (max-width: $max-1100) {
     margin: 0 auto;
     max-width: rem(380);
+    text-align: center;
   }
   @media (max-width: $max-400) {
     max-width: rem(300);
