feat: переделана главная страница

--- a/src/pages/FurniturePage.module.scss
+++ b/src/pages/FurniturePage.module.scss
@@ -14,3 +14,6 @@
 .wrapper {
   padding: rem(50) 0;
 }
+.darkBg {
+  background: linear-gradient(180deg, #312d2a 0%, #35302c 57.29%, #312d2a 100%);
+}
