--- a/src/widgets/LeaveRequest2/LeaveRequest2.module.scss
+++ b/src/widgets/LeaveRequest2/LeaveRequest2.module.scss
@@ -158,7 +158,8 @@
   margin-left: rem(160);
   max-width: rem(420);
   font-size: rem(18);
-  @include gilroy(600);
+  @include gilroy(400);
+  font-style: italic;
   text-wrap: pretty;
   position: relative;
   z-index: 2;
