--- a/src/widgets/LeaveRequestDesigner/LeaveRequestDesigner.module.scss
+++ b/src/widgets/LeaveRequestDesigner/LeaveRequestDesigner.module.scss
@@ -27,10 +27,6 @@
   overflow: hidden;
   margin: 0 auto;
   position: relative;
-
-  @media screen and (max-width: $max-768) {
-    padding: rem(20) rem(15);
-  }
 }
 
 .container {
@@ -46,6 +42,7 @@
   }
 
   @media (max-width: $max-768) {
+    padding-inline: 0;
   }
 }
 .bgImage {
@@ -58,24 +55,25 @@
   height: 100%;
   -o-object-fit: cover;
   object-fit: cover;
-  -o-object-position: center;
-  object-position: center;
+  -o-object-position: right;
+  object-position: right;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  -webkit-filter: blur(rem(8));
-  filter: blur(rem(8));
-  -webkit-mask-image: linear-gradient(
-    90deg,
-    rgba(64, 56, 48, 0) 0%,
-    rgba(64, 56, 48, 0.5) 100%
-  );
-  mask-image: linear-gradient(
-    90deg,
-    rgba(64, 56, 48, 0) 10%,
-    rgba(64, 56, 48, 0.5) 100%
-  );
+
+  @media screen and (max-width: $max-800) {
+    -webkit-mask-image: linear-gradient(
+      90deg,
+      rgba(64, 56, 48, 0.5) 10%,
+      rgba(64, 56, 48, 0.5) 100%
+    );
+    mask-image: linear-gradient(
+      90deg,
+      rgba(64, 56, 48, 0.5) 10%,
+      rgba(64, 56, 48, 0.5) 100%
+    );
+  }
 }
 .left {
   display: flex;
@@ -95,6 +93,7 @@
   text-wrap: balance;
   position: relative;
   z-index: 2;
+  margin-top: rem(30);
 
   @media screen and (max-width: $max-768) {
     font-size: rem(24);
@@ -106,28 +105,12 @@
   color: $white;
   line-height: 1.5;
   margin-top: rem(30);
-  text-wrap: balance;
   position: relative;
   z-index: 2;
 
   @media screen and (max-width: $max-768) {
     font-size: rem(14);
   }
-}
-.asks {
-  position: relative;
-  z-index: 2;
-  margin-top: rem(30);
-  display: flex;
-  flex-direction: column;
-  gap: rem(20);
-}
-.ask {
-  display: flex;
-  align-items: center;
-  gap: rem(14);
-
-  justify-content: flex-start;
 }
 .icon {
   color: $white;
@@ -169,18 +152,23 @@
   user-select: none;
 }
 .card {
+  margin-left: rem(40);
   margin-top: rem(20);
   display: flex;
   position: relative;
   z-index: 1;
   flex-direction: column;
+  align-items: flex-start;
   gap: rem(20);
   padding-bottom: rem(10);
 
-  @media (max-width: $max-800) {
-    padding-top: rem(30);
+  @media screen and (max-width: $max-1000) {
+    margin-left: 0;
   }
 
+  @media screen and (max-width: $max-600) {
+    align-items: center;
+  }
   @media screen and (max-width: $max-500) {
     padding-inline: rem(30);
   }
@@ -190,7 +178,6 @@
   font-size: rem(16);
   color: $white;
   line-height: 1.5;
-  display: flex;
 
   @media screen and (max-width: $max-800) {
     text-align: center;
@@ -234,7 +221,7 @@
   align-items: flex-start;
   gap: rem(26);
 
-  @media screen and (max-width: $max-800) {
+  @media screen and (max-width: $max-600) {
     flex-direction: column;
     align-items: center;
   }
@@ -359,22 +346,19 @@
   }
 }
 .text {
-  @media screen and (max-width: $max-800) {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-  }
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .infoText {
   @include gilroy(400);
   font-size: rem(10);
   color: $white;
   margin-top: rem(4);
-  text-align: center;
   display: flex;
-  flex-direction: column;
   align-items: center;
+  flex-direction: column;
 
   & button {
     color: #f28c6b;
@@ -403,7 +387,6 @@
   z-index: 2;
   font-size: rem(16);
   color: #a3863d;
-  display: inline;
 
   & span {
     font-weight: 700;
@@ -412,11 +395,69 @@
   @media screen and (max-width: $max-800) {
     text-align: center;
   }
+}
 
-  // @media screen and (max-width: $max-800) {
-  //   max-width: rem(230);
-  // }
-  // @media (max-width: $max-400) {
-  //   max-width: rem(300);
-  // }
+.tags {
+  display: flex;
+  align-items: center;
+  gap: rem(15);
+  position: relative;
+  z-index: 2;
+
+  &.upperTags {
+    @media screen and (max-width: $max-950) {
+      margin-top: rem(-30);
+    }
+  }
+
+  &.column {
+    .tagWrapper {
+      display: flex;
+      align-items: center;
+      gap: rem(15);
+    }
+
+    @media screen and (max-width: $max-950) {
+      flex-direction: column;
+      align-items: flex-start;
+      margin-top: rem(50);
+
+      &.upperTags {
+        margin-top: rem(20);
+
+        @media screen and (max-width: $max-700) {
+          margin-top: rem(40);
+        }
+      }
+
+      .tagWrapper {
+        flex-direction: row-reverse;
+      }
+    }
+  }
+}
+.tag {
+  @include gilroy(500);
+  font-size: rem(20);
+  color: $white;
+
+  @media screen and (max-width: $max-768) {
+    font-size: rem(16);
+  }
+}
+.circle {
+  width: rem(10);
+  height: rem(10);
+  border-radius: rem(100);
+  background-color: #d56745;
+  -webkit-filter: drop-shadow(0px 0px 8.2px rgba(255, 255, 255, 0.25));
+  filter: drop-shadow(0px 0px 8.2px rgba(255, 255, 255, 0.25));
+
+  &.last {
+    display: none;
+
+    @media screen and (max-width: $max-950) {
+      display: block;
+    }
+  }
 }
