fix: сортировка и перенос слов

--- a/src/widgets/Kitchen/Kitchen.module.scss
+++ b/src/widgets/Kitchen/Kitchen.module.scss
@@ -72,6 +72,7 @@
   line-height: 1.5;
   cursor: text;
   text-wrap: balance;
+  word-break: auto-phrase;
 }
 .description {
   @include gilroy(400);
