--- a/src/widgets/FurnitureHelloScreen/FurnitureHelloScreen.module.scss
+++ b/src/widgets/FurnitureHelloScreen/FurnitureHelloScreen.module.scss
@@ -5,7 +5,7 @@
   min-height: rem(750);
   max-height: rem(1400);
 
-  padding-top: rem(160);
+  padding-top: rem(120);
   position: relative;
 
   @media (max-width: $max-1300) {
@@ -44,10 +44,6 @@
 }
 .container {
   @include container();
-
-  @media (min-width: $max-700) {
-    padding-left: rem(56);
-  }
   position: relative;
   z-index: 2;
 }
@@ -55,11 +51,19 @@
   display: flex;
   align-items: center;
   gap: rem(15);
+
+  @media screen and (max-width: em(370)) {
+    gap: rem(10);
+  }
 }
 .tag {
   @include gilroy(500);
   font-size: rem(20);
   color: $white;
+
+  @media screen and (max-width: em(370)) {
+    font-size: rem(16);
+  }
 }
 .circle {
   width: rem(10);
@@ -70,14 +74,13 @@
   filter: drop-shadow(0px 0px 8.2px rgba(255, 255, 255, 0.25));
 }
 .title {
-  margin-top: rem(50);
+  margin-top: rem(30);
   @include noto(600);
   font-size: rem(48);
   line-height: 1.3;
   color: #fff;
   max-width: rem(711);
   width: 100%;
-  margin-bottom: rem(20);
 
   &.boldTitle {
     font-weight: 600;
@@ -97,7 +100,7 @@
   font-size: rem(18);
   color: $white;
   max-width: rem(663);
-  margin-top: rem(50);
+  margin-top: rem(30);
 
   @media (max-width: $max-500) {
     font-size: rem(14);
