--- a/src/widgets/FurnitureItem/FurnitureItem.module.scss
+++ b/src/widgets/FurnitureItem/FurnitureItem.module.scss
@@ -16,6 +16,7 @@
   -o-object-fit: cover;
   object-fit: cover;
   max-height: rem(370);
+  min-height: rem(370);
   height: 100%;
   position: relative;
   border-radius: rem(12);
@@ -109,6 +110,7 @@
   border-radius: rem(12);
   width: 100%;
   height: 100%;
+  min-height: rem(370);
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
