--- a/src/widgets/Kitchen/Kitchen.module.scss
+++ b/src/widgets/Kitchen/Kitchen.module.scss
@@ -8,22 +8,13 @@
   height: 100%;
   position: relative;
   cursor: pointer;
-  display: block;
+  display: flex;
 
-  &:nth-child(1n + 1) {
-    grid-area: one;
-  }
-  &:nth-child(2n + 2) {
-    grid-area: two;
-  }
-  &:nth-child(3n + 3) {
-    grid-area: three;
-  }
-  &:nth-child(4n + 4) {
-    grid-area: four;
-  }
-  &:nth-child(5n + 5) {
-    grid-area: five;
+  &.flex {
+    flex-grow: 1;
+    flex-shrink: 1;
+    flex-basis: content;
+    // flex: 0 0 30%;
   }
 }
 .swiper {
@@ -33,6 +24,7 @@
   -o-object-fit: cover;
   object-fit: cover;
   position: relative;
+  max-height: rem(500);
 }
 .betweenWrapper {
   display: flex;
@@ -103,7 +95,6 @@
     font-size: rem(16);
 
     &.brown {
-      color: #73655b;
       margin-right: rem(5);
     }
   }
@@ -138,11 +129,20 @@
 }
 
 .image {
+  height: 100%;
   width: 100%;
-}
-.img {
+  max-height: rem(500);
   -o-object-fit: cover;
   object-fit: cover;
+  -o-object-position: 50%;
+  object-position: 50%;
+}
+.img {
+  max-height: rem(500);
+  -o-object-fit: cover;
+  object-fit: cover;
+  -o-object-position: 50%;
+  object-position: 50%;
   width: 100%;
   height: 100%;
   -webkit-user-select: none;
