--- a/src/widgets/Kitchens/Kitchens.module.scss
+++ b/src/widgets/Kitchens/Kitchens.module.scss
@@ -13,6 +13,7 @@
 }
 .container {
   @include container();
+  max-width: rem(1260);
 }
 .title {
   @include noto(400);
@@ -113,33 +114,11 @@
   margin: 0 auto;
   width: 100%;
   margin-top: rem(50);
-  max-width: rem(950);
-  display: grid;
-  grid-template-columns: repeat(2, rem(465));
-  grid-template-rows: repeat(10, rem(90));
   gap: rem(20);
-  grid-template-areas:
-    "one two"
-    "one two"
-    "one two"
-    "one three"
-    "one three"
-    "one three"
-    "four three"
-    "four five"
-    "four five"
-    "four five";
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(rem(320), 1fr));
 
   @media (max-width: $max-1000) {
-    grid-template-columns: 100%;
-    grid-template-rows: auto;
-    justify-items: center;
-    grid-template-areas:
-      "one"
-      "two"
-      "three"
-      "four"
-      "five";
   }
 }
 .moreKitchens {
@@ -154,29 +133,6 @@
 
   @media (max-width: $max-1000) {
     grid-template-columns: 100%;
-  }
-}
-.customKitchen {
-  width: 100%;
-
-  @media (max-width: $max-1000) {
-    max-height: rem(500);
-  }
-
-  &:nth-child(1n + 1) {
-    grid-area: one;
-  }
-  &:nth-child(2n + 2) {
-    grid-area: two;
-  }
-  &:nth-child(3n + 3) {
-    grid-area: three;
-  }
-  &:nth-child(4n + 4) {
-    grid-area: four;
-  }
-  &:nth-child(5n + 5) {
-    grid-area: five;
   }
 }
 .kitchenWrapper {
