--- a/src/widgets/KitchenExamples/KitchenExamples.module.scss
+++ b/src/widgets/KitchenExamples/KitchenExamples.module.scss
@@ -12,6 +12,7 @@
 }
 .container {
   @include container();
+  max-width: rem(1260);
 }
 
 .kitchens {
@@ -159,17 +160,11 @@
 }
 .allKitchens {
   margin: 0 auto;
-  display: grid;
-  grid-template-columns: repeat(2, 49%);
-  grid-template-rows: auto;
-  gap: rem(20);
-  margin-top: rem(30);
-  max-width: rem(940);
   width: 100%;
-
-  @media (max-width: $max-900) {
-    grid-template-columns: 100%;
-  }
+  margin-top: rem(50);
+  gap: rem(20);
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(rem(320), 1fr));
 }
 .kitchenWrapper {
   width: 100%;
