--- a/src/widgets/Contacts/Contacts.module.scss
+++ b/src/widgets/Contacts/Contacts.module.scss
@@ -11,7 +11,20 @@
 .container {
   @include container();
 }
+.title {
+  @include noto(400);
+  font-size: rem(40);
+  line-height: 1.3;
+  text-align: center;
+  margin: 0 auto;
+  position: relative;
+  z-index: 2;
+  color: $white;
 
+  @media (max-width: $max-768) {
+    font-size: rem(24);
+  }
+}
 .content {
   margin-top: rem(40);
   padding: 0 0 0 rem(20);
@@ -276,7 +289,7 @@
 }
 
 .map {
-  margin-top: rem(50);
+  margin-top: rem(35);
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
