--- a/src/widgets/PhotoSlider/PhotoSlider.module.scss
+++ b/src/widgets/PhotoSlider/PhotoSlider.module.scss
@@ -1,7 +1,8 @@
 @import "@/shared/styles/_vars";
 
 .photoSlider {
-  padding: rem(50) 0;
+  padding: rem(20) 0;
+  padding-bottom: rem(10);
 }
 .container {
   @include container();
@@ -31,7 +32,7 @@
 }
 .subtitle {
   margin: 0 auto;
-  margin-top: rem(20);
+  margin-top: rem(8);
   @include gilroy(400);
   color: $white;
   text-align: center;
