--- a/src/widgets/Stocks/Stocks.module.scss
+++ b/src/widgets/Stocks/Stocks.module.scss
@@ -66,6 +66,10 @@
   gap: rem(10);
   justify-content: space-between;
   align-items: flex-start;
+
+  @media screen and (max-width: $max-800) {
+    max-width: rem(260);
+  }
 }
 .textContent {
   display: flex;
